src/test/ui/super-at-top-level.stderr
error[E0433]: failed to resolve: there are too many initial `super`s.
  --> $DIR/super-at-top-level.rs:1:5
   |
LL | use super::f;
   |     ^^^^^ there are too many initial `super`s.

error: aborting due to previous error

For more information about this error, try `rustc --explain E0433`.
