src/test/ui/super-at-top-level.rs
use super::f; //~ ERROR there are too many initial `super`s

fn main() {
}
